Disable floating on Footer (fix unclickable buttons on mobile)
(now only appear after the main content like a block DOM element)

--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,6 @@ main, div#container {
 		}
 
 footer {
-	position: fixed;
-	bottom: 0;
 	width: 100%;
 	text-align: center;
 }
